# 24EME_FYP

./: LICENSE  README.md  sensor_manager.launch.xml
devel/: .catkin  local_setup.sh  setup.sh
devel/include/robotiq_2f_gripper_control/: Robotiq2FGripper_robot_input.h  Robotiq2FGripper_robot_output.h
devel/include/robotiq_3f_gripper_control/: Robotiq3FGripperConfig.h
devel/lib/pkgconfig/: myur_description.pc  myur_moveit_config.pc  robotiq_2f_140_gripper_visualization.pc  robotiq_2f_85_gripper_visualization.pc  robotiq_2f_c2_gripper_visualization.pc  robotiq_2f_gripper_action_server.pc  robotiq_2f_gripper_control.pc  robotiq_3f_gripper_articulated_gazebo.pc  robotiq_3f_gripper_articulated_gazebo_plugins.pc  robotiq_3f_gripper_articulated_msgs.pc  robotiq_3f_gripper_control.pc  robotiq_3f_gripper_joint_state_publisher.pc  robotiq_3f_gripper_visualization.pc  robotiq_3f_rviz.pc  robotiq_ethercat.pc  robotiq_ft_sensor.pc  robotiq_modbus_rtu.pc  robotiq_modbus_tcp.pc  ur10_moveit_config.pc  ur10e_moveit_config.pc  ur16e_moveit_config.pc  ur3_moveit_config.pc  ur3e_moveit_config.pc  ur5_moveit_config.pc  ur5e_moveit_config.pc  ur_description.pc  ur_gazebo.pc  ur_kinematics.pc
devel/lib/robotiq_2f_gripper_action_server/: robotiq_2f_gripper_action_server_client_test  robotiq_2f_gripper_action_server_node
devel/lib/robotiq_2f_gripper_control/: robotiq_2f_gripper_ethercat_node
devel/lib/robotiq_3f_gripper_control/: robotiq_3f_gripper_can_node  robotiq_3f_gripper_ethercat_node
devel/lib/robotiq_3f_gripper_joint_state_publisher/: robotiq_3f_gripper_joint_states
devel/lib/robotiq_ft_sensor/: rq_sensor  rq_test_sensor
models/book1_testfinal/: model.config  model.sdf
models/book2_testfinal/: model.config  model.sdf
models/book3_testfinal/: model.config  model.sdf
models/book_1/: model.sdf
models/book_2/: model.sdf
models/book_3/: model.sdf
models/bookshelf/: model.config  model.sdf
myur_description/launch/: myur5.launch  spawn_urdf.launch
myur_description/urdf/: myur5.urdf.xacro
myur_moveit_config/config/: kinematics.yaml  myur5.srdf
myur_moveit_config/launch/: default_warehouse_db.launch
robotiq/: README.md
robotiq/robotiq_2f_140_gripper_visualization/launch/: test_2f_140_model.launch
robotiq/robotiq_2f_85_gripper_visualization/: README.md
robotiq/robotiq_2f_gripper_action_server/: CMakeLists.txt  package.xml
robotiq/robotiq_2f_gripper_control/: CMakeLists.txt  mainpage.dox
robotiq/robotiq_2f_gripper_control/include/robotiq_2f_gripper_control/: robotiq_2f_gripper_ethercat_client.h
robotiq/robotiq_2f_gripper_control/launch/: robotiq_2f_gripper_ethercat.launch
robotiq/robotiq_2f_gripper_control/msg/: Robotiq2FGripper_robot_input.msg  Robotiq2FGripper_robot_output.msg
robotiq/robotiq_2f_gripper_control/nodes/: Robotiq2FGripperRtuNode.py  Robotiq2FGripperSimpleController.py  Robotiq2FGripperStatusListener.py  Robotiq2FGripperTcpNode.py
robotiq/robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: baseRobotiq2FGripper.py  robotiq_2f_gripper_ctrl.py  robotiq_2f_gripper_ethercat_client.cpp  robotiq_2f_gripper_ethercat_node.cpp
robotiq/robotiq_3f_gripper_articulated_gazebo_plugins/: CMakeLists.txt
robotiq/robotiq_3f_gripper_articulated_msgs/: CMakeLists.txt
robotiq/robotiq_3f_gripper_control/: CMakeLists.txt  mainpage.dox
robotiq/robotiq_3f_gripper_joint_state_publisher/: CMakeLists.txt  README.md  package.xml
robotiq/robotiq_3f_gripper_visualization/: mainpage.dox
robotiq/robotiq_3f_rviz/: CMakeLists.txt
robotiq/robotiq_3f_rviz/src/: robotiq_3f_rviz.cpp
robotiq/robotiq_ft_sensor/: CMakeLists.txt
robotiq/robotiq_ft_sensor/nodes/: rq_test_sensor.cpp
robotiq/robotiq_ft_sensor/src/: rq_sensor_com.cpp
robotiq/robotiq_modbus_rtu/: CMakeLists.txt  setup.py
robotiq/robotiq_modbus_tcp/: CMakeLists.txt  mainpage.dox
src/booksink/: CMakeLists.txt  package.xml
src/booksink/launch/: display.launch  (+2 more)
src/booksink2/: CMakeLists.txt  package.xml
src/booksink_ur_moveit_config/: CMakeLists.txt  package.xml
src/camera_holder/: CMakeLists.txt  package.xml
src/camera_holder/launch/: display.launch  gazebo.launch
src/camera_holder/meshes/: camera_holder_link.STL
src/camera_holder/urdf/: camera_holder.csv  camera_holder.urdf
src/my_mir_control/: CMakeLists.txt  package.xml
src/mybot_moveit_config/: CMakeLists.txt  package.xml
src/myur5_moveit_config/: CMakeLists.txt  package.xml
src/myur_description/: package.xml
src/myur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  ros_controllers.yaml
src/ultralytics_ros/: label_list.ods
(+270 files in other folders)
